# dyndns

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.action
.github/workflows/: build-docker-image.yml  build-release.yml
docker/: start.sh
migrations/2023-05-06-135758_create_dyndns/: down.sql  up.sql
migrations/2023-05-08-083834_create_history/: down.sql  up.sql
migrations/2023-05-08-090731_update_dyndns/: up.sql
migrations/2023-05-08-101121_update_history/: up.sql
migrations/2023-05-16-065933_update_dyndns/: up.sql
migrations/2025-02-10-000000_create_refresh_tokens/: up.sql
migrations/2025-02-10-020000_create_auth_secrets/: down.sql  up.sql
src/: auth.rs  config.rs  error.rs  main.rs  trace.rs  util.rs
src/api/: auth.rs  dyndns.rs  history.rs  interfaces.rs  mod.rs
src/auth/: credential.rs  manager.rs  mod.rs
src/auth/token/: access.rs  mod.rs  refresh.rs
src/db/: migration.rs  mod.rs  models.rs  pagination.rs  schema.rs
src/dyndns/: api.rs  check.rs  http_client.rs  mod.rs  scheduler.rs  updater.rs  v4.rs  v6.rs
src/dyndns/checker/: ipv4.rs  ipv6.rs  mod.rs  parser.rs
src/dyndns/lookup/: http.rs  local.rs  mod.rs
src/middleware/: auth.rs  trace.rs
