[package]
name = "dyndns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
diesel = { version = "2.0.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
] }
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
diesel_migrations = "2.0.0"
deadpool-diesel = { version = "0.4.1", features = ["sqlite"] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
local-ip-address = "0.5"
pin-project = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "ansi",
], default-features = false }
futures-util = "0.3"
once_cell = "1.17"
figment = { version = "0.10", features = ["env"] }
yansi = "0.5"
thiserror = "1.0"
async-trait = "0.1"
is-terminal = "0.4"
axum-extra = "0.7"
validator = { version = "0.16", features = ["derive"] }

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
