[package]
name = "dyndns"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = "0.10.3"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dotenvy = "0.15.7"
diesel = { version = "2.3.2", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
diesel_migrations = "2.3.0"
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
chrono = { version = "0.4.42", default-features = false, features = [
    "clock",
    "serde",
] }
local-ip-address = "0.6.5"
pin-project-lite = "0.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "fmt",
    "ansi",
], default-features = false }
futures-util = "0.3.31"
once_cell = "1.21.3"
config = { version = "0.15", default-features = false }
yansi = "1.0.1"
thiserror = "2.0.16"
is-terminal = "0.4.16"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "10.0.0", features = ["aws_lc_rs"] }
argon2 = "0.5.3"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
isahc = { version = "1.7.2", default-features = false, features = [
    "http2",
    "json",
    "text-decoding",
    "static-ssl",
] }

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
